--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_CREATE_TOPICS: "news-req:1:3, news-resp:1:3"
+#      KAFKA_CREATE_TOPICS: "news-req:1:3, news-resp:1:3"
       KAFKA_OFFSETS_RETENTION_MINUTES: 60
 
   redis:
