Create config for Producer/Consumer

--- a/news-user-api/pom.xml
+++ b/news-user-api/pom.xml
@@ -53,6 +53,13 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.confluent/kafka-avro-serializer -->
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-avro-serializer</artifactId>
+			<version>7.6.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
