Extract topic names to environment variables

--- a/news-user-api/src/main/resources/application.properties
+++ b/news-user-api/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=news-user-api
 server.port=8080
 spring.kafka.bootstrap-servers=localhost:39092
+spring.kafka.topic.news.request=news
+spring.kafka.topic.news.response=cached-news
+spring.kafka.topic.json=json-topic
+spring.kafka.topic.avro=avro-topic
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=
