Change topic names in application.properties files

--- a/news-collector/src/main/resources/application.properties
+++ b/news-collector/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=news-collector
 server.port=9090
 spring.kafka.bootstrap-servers=localhost:39092
-
+spring.kafka.topic.news.request=news-request
+spring.kafka.topic.news.response=news-response
+spring.kafka.topic.json=json-topic
+spring.kafka.topic.avro=avro-topic
 newsapi.uri=https://newsapi.org/v2/everything
 newsapi.api-key=cc418e106f5a451b9775d431df154c24
 newsapi.keyword=bitcoin
