--- a/news-user-api/src/main/resources/application.properties
+++ b/news-user-api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=news-user-api
 server.port=8080
 spring.kafka.bootstrap-servers=localhost:39092
-spring.kafka.topic.news.request=news
-spring.kafka.topic.news.response=cached-news
+spring.kafka.topic.news.request=news-request
+spring.kafka.topic.news.response=news-response
 spring.kafka.topic.json=json-topic
 spring.kafka.topic.avro=avro-topic
 spring.data.redis.host=localhost
