--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - 32181:2181
+      - "32181:2181"
 
   kafka:
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
-      - 39092:39092
+      - "39092:39092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -24,11 +24,25 @@ services:
 #      KAFKA_CREATE_TOPICS: "news-req:1:3, news-resp:1:3"
       KAFKA_OFFSETS_RETENTION_MINUTES: 60
 
+  schema-registry:
+    image: confluentinc/cp-schema-registry:7.1.0
+    platform: linux/amd64
+    hostname: schema-registry
+    container_name: schema-registry
+    depends_on:
+      - kafka
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka:9092'
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+
   redis:
     image: redis:latest
     restart: always
     ports:
-      - 6379:6379
+      - "6379:6379"
     environment:
       REDIS_PASSWORD:
     volumes: 
