Add schema-registry-servers property to connect to container

--- a/news-collector/src/main/resources/application.properties
+++ b/news-collector/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=news-collector
 server.port=9090
 spring.kafka.bootstrap-servers=localhost:39092
+spring.kafka.schema-registry-servers=localhost:8081
 spring.kafka.topic.news.request=news-request
 spring.kafka.topic.news.response=news-response
 spring.kafka.topic.json=json-topic
