Create AvroMessagePublisher to push messages to avro topic in news-collector module

--- a/news-collector/pom.xml
+++ b/news-collector/pom.xml
@@ -42,7 +42,7 @@
                         <configuration>
                             <sourceDirectory>${project.basedir}/src/main/java/spyra/lukasz/newsconsumer/dto/avro
                             </sourceDirectory>
-                            <outputDirectory>${project.basedir}/src/main/java/spyra/lukasz/newsconsumer/dto/avro
+                            <outputDirectory>${project.basedir}/src/main/java
                             </outputDirectory>
                         </configuration>
                     </execution>
