Add avro schema to user-news-api module

--- a/news-user-api/pom.xml
+++ b/news-user-api/pom.xml
@@ -48,7 +48,7 @@
                         <configuration>
                             <sourceDirectory>${project.basedir}/src/main/java/spyra/lukasz/usernewsapi/dto/avro
                             </sourceDirectory>
-                            <outputDirectory>${project.basedir}/src/main/java/spyra/lukasz/usernewsapi/dto/avro
+                            <outputDirectory>${project.basedir}/src/main/java
                             </outputDirectory>
                         </configuration>
                     </execution>
