--- a/news-user-api/src/main/resources/application.properties
+++ b/news-user-api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=news-user-api
 server.port=8080
 spring.kafka.bootstrap-servers=localhost:39092
+spring.kafka.schema-registry-servers=http://localhost:8081
 spring.kafka.topic.news.request=news-request
 spring.kafka.topic.news.response=news-response
 spring.kafka.topic.json=json-topic
