--- a/news-collector/pom.xml
+++ b/news-collector/pom.xml
@@ -40,9 +40,9 @@
                             <goal>schema</goal>
                         </goals>
                         <configuration>
-                            <sourceDirectory>${project.basedir}/src/main/java/spyra/lukasz/newsconsumer/dto/avro
+                            <sourceDirectory>${project.basedir}/src/main/resources/avro
                             </sourceDirectory>
-                            <outputDirectory>${project.basedir}/src/main/java
+                            <outputDirectory>${project.build.directory}/generated-sources/avro
                             </outputDirectory>
                         </configuration>
                     </execution>
