--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,69 @@ version: '3'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
+    hostname: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "32181:2181"
 
-  kafka:
+  kafka01:
     image: confluentinc/cp-kafka:latest
+    hostname: kafka01
+    container_name: kafka01
+    depends_on:
+      - zookeeper
+    ports:
+      - "19092:19092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka01:9092,PLAINTEXT_HOST://localhost:19092
+      #      format - NAME:PROTOCOL
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      #      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      #      KAFKA_CREATE_TOPICS: "news-req:1:3, news-resp:1:3"
+      KAFKA_OFFSETS_RETENTION_MINUTES: 60
+
+  kafka02:
+    image: confluentinc/cp-kafka:latest
+    hostname: kafka02
+    container_name: kafka02
+    depends_on:
+      - zookeeper
+    ports:
+      - "29092:29092"
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka02:9092,PLAINTEXT_HOST://localhost:29092
+      #      format - NAME:PROTOCOL
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      #      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      #      KAFKA_CREATE_TOPICS: "news-req:1:3, news-resp:1:3"
+      KAFKA_OFFSETS_RETENTION_MINUTES: 60
+
+  kafka03:
+    image: confluentinc/cp-kafka:latest
+    hostname: kafka03
+    container_name: kafka03
     depends_on:
       - zookeeper
     ports:
       - "39092:39092"
     environment:
-      KAFKA_BROKER_ID: 1
+      KAFKA_BROKER_ID: 3
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:39092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka03:9092,PLAINTEXT_HOST://localhost:39092
+      #      format - NAME:PROTOCOL
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#      KAFKA_CREATE_TOPICS: "news-req:1:3, news-resp:1:3"
+      #      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      #      KAFKA_CREATE_TOPICS: "news-req:1:3, news-resp:1:3"
       KAFKA_OFFSETS_RETENTION_MINUTES: 60
 
   schema-registry:
@@ -30,12 +73,16 @@ services:
     hostname: schema-registry
     container_name: schema-registry
     depends_on:
-      - kafka
+      - zookeeper
+      - kafka01
+      - kafka02
+      - kafka03
     ports:
       - "8081:8081"
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:39092
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka02:9092,PLAINTEXT_HOST://localhost:29092
       SCHEMA_REGISTRY_LISTENERS: http://schema-registry:8081
 
   redis:
@@ -45,7 +92,7 @@ services:
       - "6379:6379"
     environment:
       REDIS_PASSWORD:
-    volumes: 
+    volumes:
       - redis-data:/data
 volumes:
   redis-data:
