--- a/news-user-api/src/main/resources/application.properties
+++ b/news-user-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=news-user-api
 server.port=8080
-spring.kafka.bootstrap-servers=localhost:39092
+spring.kafka.bootstrap-servers=localhost:19092,localhost:29092,localhost:39092
 spring.kafka.schema-registry-servers=http://localhost:8081
 spring.kafka.topic.news.request=news-request
 spring.kafka.topic.news.response=news-response
